Fixed an issue where alignment classes weren't working in table headings and table cells

--- a/src/styles/base/_base.layout.scss
+++ b/src/styles/base/_base.layout.scss
@@ -14,6 +14,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba($black, 0);
   box-sizing: border-box;
+  font-smooth: antialiased;
   font-smoothing: antialiased;
   text-size-adjust: 100%;
 }
